--- a/samples/Indiko.Maui.Controls.Chat.Sample/Indiko.Maui.Controls.Chat.Sample.csproj
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/Indiko.Maui.Controls.Chat.Sample.csproj
@@ -9,10 +9,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>INDIKO .NET MAUI Markdown View Sample</ApplicationTitle>
+		<ApplicationTitle>INDIKO .NET MAUI Chat View Sample</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>ch.indiko.markdown.sample</ApplicationId>
+		<ApplicationId>ch.indiko.sandbox</ApplicationId>
 		<ApplicationIdGuid>A20E30BB-3BF7-4ACB-89F2-596834136909</ApplicationIdGuid>
 
 		<!-- Versions -->
@@ -23,6 +23,11 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">30.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|**net8.0-ios**|AnyCPU'">
+		<ForceSimulatorX64ArchitectureInIDE>true</ForceSimulatorX64ArchitectureInIDE>
+		<RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
