--- a/.github/workflows/symanticrelease.yml
+++ b/.github/workflows/symanticrelease.yml
@@ -1,4 +1,4 @@
-name: SymanticRelease
+name: CI with Semantic Release
 on:
   push:
     branches:
@@ -6,18 +6,33 @@ on:
       - master
     paths-ignore:
       - "**.md"
+
+env:
+  DOTNET_NOLOGO: true                     # Disable the .NET logo
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true # Disable the .NET first time experience
+  DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
+  DONET_VERSION: 8.0.402
+ 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Build
-        run:  dotnet build src\Indiko.Maui.Controls.Markdown.sln -c Release
+     - name: Setup .NET
+       uses: actions/setup-dotnet@v1
+       with:
+        dotnet-version: ${{ env.DONET_VERSION }}
+        
+     - name: Install MAUI workload
+       run: dotnet workload install maui
+     
+     - uses: actions/checkout@v3
+     - name: Build
+       run: dotnet build src/Indiko.Maui.Controls.Chat.sln -c Release
 
   symantic-release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment:
-      name: ReleaseBuilds
+      name: Release
     needs: build  # This ensures the symantic-release job runs after the build job
     steps:
       - name: Checkout
@@ -28,3 +43,4 @@ jobs:
         uses: cycjimmy/semantic-release-action@v4
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
