wip: chatview sample

--- a/samples/Indiko.Maui.Controls.Chat.Sample/Indiko.Maui.Controls.Chat.Sample.csproj
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/Indiko.Maui.Controls.Chat.Sample.csproj
@@ -47,6 +47,7 @@
 	  <None Remove="Assets\Images\hiker2.png" />
 	  <None Remove="Assets\Images\hiker3.png" />
 	  <None Remove="Assets\Images\hiker4.png" />
+	  <None Remove="Assets\Images\mountain1.png" />
 	  <None Remove="Resources\Images\check.png" />
 	  <None Remove="Resources\Images\dev.png" />
 	  <None Remove="Resources\Images\dotnet_bot.svg" />
@@ -59,6 +60,7 @@
 	  <EmbeddedResource Include="Assets\Images\hiker2.png" />
 	  <EmbeddedResource Include="Assets\Images\hiker3.png" />
 	  <EmbeddedResource Include="Assets\Images\hiker4.png" />
+	  <EmbeddedResource Include="Assets\Images\mountain1.png" />
 	</ItemGroup>
 
 	<ItemGroup>
