fix: Updates repository and project URLs
Updates the project URL and repository URL in the project file to point to the correct GitHub repository for the Chat control.

--- a/src/Indiko.Maui.Controls.Chat/Indiko.Maui.Controls.Chat.csproj
+++ b/src/Indiko.Maui.Controls.Chat/Indiko.Maui.Controls.Chat.csproj
@@ -13,8 +13,8 @@
 		<Authors>INDIKO</Authors>
 		<Copyright>Copyright © INDIKO and contributors</Copyright>
 		<IsPackable>True</IsPackable>
-		<PackageProjectUrl>https://github.com/0xc3u/Indiko.Maui.Controls.Markdown</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/0xc3u/Indiko.Maui.Controls.Markdown</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/0xc3u/Indiko.Maui.Controls.Chat</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/0xc3u/Indiko.Maui.Controls.Chat</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>dotnet-maui;maui;ui;chat;control;RecyclerView;UICollectionView</PackageTags>
 		<IncludeSymbols>True</IncludeSymbols>
